# KIML

./: README.md
multifidelity-gps/: README.md  main.py  pyproject.toml
multifidelity-gps/original_cases/: case1_linear_scaling_original.py  case2_moderate_nonlinearities_original.py  case3_complex_fidelity_original.py  case4_divergent_dynamics_original.py
multifidelity-gps/src/multifidelity_gp/: __init__.py  cases.py  models.py  plotting.py  run.py
multifidelity-nns/: README.md  main.py  requirements.txt
multifidelity-nns/original_scripts/: case1_original.py  case2_original.py  case3_original.py  case4_original.py
multifidelity-nns/src/ki_multifidelity/: __init__.py  cases.py  models.py  physics.py  plotting.py  run.py
